--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ font-size: 150px;
 }
     </style>
 <body>
-    <button id="btnVirus" onclick="alert('VOCÊ É FRANGO FILIPÃO')">Clique aqui!!!!!</button>
+    <button id="btnVirus" onclick="alert('Virus')">Clique aqui!!!!!</button>
 </body>
 </head>
 
