--- a/index.html
+++ b/index.html
@@ -7,15 +7,12 @@
     <link rel="stylesheet" href="style.css" />
     <script src="script.js"></script>
     <title>Alert</title>
-    <style>
-/* Botão alert */
-#btnVirus {
-font-size: 150px;
-    
-}
-    </style>
+
 <body>
-    <button id="btnVirus" onclick="alert('Virus')">Clique aqui!!!!!</button>
+    <div>
+        <img heitgh="1000" src="https://cdn.discordapp.com/attachments/1032089386084466729/1032826949837529178/219500390_671471640606545_7323543374000835419_n.jpg">
+    </div>
+    <button id="btnVirus" onclick="alert('CARLÃO O DEMONIO')">Clique aqui!!!!!</button>
 </body>
 </head>
 
