modificaçao pedro gay

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Alert</title>
 
 <body>
-    <button id="btnVirus" onclick="alert('CARLÃO O DEMONIO')">Clique aqui!!!!!</button>
+    <button id="btnVirus" onclick="alert('CARLÃO O DEMONIO')">Clique aqui gaasdawqey!!!!!</button>
 </br>
 </br>
 </br>
